resources/css/style.css
/* -------------------------------------------------- */
/* Basic Setup */
/* ---------------------------------------------------*/
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  background-color: #fff;
  color: #555;
  font-family: 'Lato', 'Arial', 'sans-serif';
  font-weight: 300;
  font-size: 20px;
  text-rendering: optimizeLegibility;
}
/* -------------------------------------------------- */
/* Reusable Components */
/* ---------------------------------------------------*/
.row {
  max-width: 1140px;
  margin: 0 auto;
}

section {
  padding: 80px 0;
}

.box {
  padding: 1%;
}

/*---- Headings ---- */

h1,
h2,
h3 {
  font-weight: 300;
  text-transform: uppercase;
}

h1 {
  margin: 0;
  margin-bottom: 20px;
  color: #fff;
  font-size: 240%;
  word-spacing: 4px;
  letter-spacing: 1px;
}

h2 {
  font-size: 180%;
  word-spacing: 2px;
  text-align: center;
  margin-bottom: 30px;
  letter-spacing: 1px;
}

h3 {
  font-size: 110%;
  margin-bottom: 15px;
}

h2:after {
  display: block;
  height: 2px;
  background-color: #e67e22;
  content: " ";
  width: 100px;
  margin: 0 auto;
  margin-top: 30px;
}

/*---- Paragraphs ---- */
.long-copy{
  line-height: 145%;
  width: 70%;
  margin-left: 15%;
}

.box p {
  font-size: 90%;
  line-height: 145%;
}

/*---- Icons ---- */

.icon-big {
  font-size: 320%;
  display: block;
  color: #e67e22;
  margin-bottom: 10px;
}



/*---- Buttons ---- */

.btn:link,
.btn:visited {
  display: inline-block;
  padding: 10px 30px;
  font-weight: 300;
  text-decoration: none;
  border-radius: 200px;
  transition: background-color 0.2s, border 0.2s, color 0.2s;
}

.btn-full:link,
.btn-full:visited {
  background-color: #e67e22;
  border: 1px solid #e67e22;
  color: #fff;
  margin-right: 15px;
}

.btn-ghost:link,
.btn-ghost:visited {
  border: 1px solid #e67e22;
  color: #e67e22;

}

.btn:hover,
.btn:active {
  background-color: #cf6d17;
}

.btn-full:hober,
.btn-full:active {
  border: 1px solid #cf6d17;
}

.btn-ghost:hover,
.btn-ghost:active {
  border: 1px solid #cf6d17;
  color: #fff;
}

/* -------------------------------------------------- */
/* Header */
/* ---------------------------------------------------*/

header {
  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("images/hero.jpg");
  background-size: cover;
  background-position: center;
  height: 100vh;
}

.hero-text-box {
  position: absolute;
  width: 1140px;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.logo {
  height: 100px;
  width: auto;
  float: left;
  margin-top: 20px;
}

.main-nav {
  float: right;
  margin-top: 55px;
}

.main-nav li {
  display: inline-block;
  margin-left: 40px;
}

.main-nav li a:link,
.main-nav li a:visited {
  padding: 8px 0;
  color: #fff;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 90%;
  border-bottom: 2px solid transparent;
  transition: border-bottom 0.2s;

}

.main-nav li a:hover,
.main-nav li a:active {
  border-bottom: 2px solid #e67e22;
}

/* -------------------------------------------------- */
/* Meals */
/* ---------------------------------------------------*/

.meals-showcase {
  list-style: none;
  width: 100%;
}

.meals-showcase li {
  display: block;
  float: left;
  width: 25%;
}

.meal-photo {
  width: 100%;
  margin: 0;
}

.meal-photo img {
  width: 100%;
  
}

